# zorya-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CopyFile.cmake  README.md  shadertoolsconfig.json
include/: ApplicationConfig.h  BufferCache.h  BufferObject.h  Camera.h  Lights.h  Material.h  Mesh.h  Model.h  ModelManager.h  RenderDevice.h  RenderHardwareInterface.h  Renderer.h  RendererBackend.h  RendererFrontend.h  ResourceCache.h  SceneGraph.h  Shaders.h
include/BuildTools/: PreProcessor.h
include/Editor/: Editor.h  EntityOutline.h  EntityProperties.h  Logger.h  SceneHierarchy.h
include/Reflection/: Lights_auto_generated.h  Material_auto_generated.h  Reflection.h  Reflection_auto_generated.h
src/: ApplicationConfig.h  BufferCache.cpp  BufferObject.cpp  Camera.cpp  Lights.cpp  Mesh.cpp  Model.cpp  Platform.cpp  Platform.h  RenderDeviceDX11.cpp  RenderHardwareInterface.cpp  RendererBackend.cpp  RendererFrontend.cpp  ResourceCache.cpp  Shaders.cpp  Transform.cpp  derma.cpp  zorya.cpp
src/BuildTools/: CMakeLists.txt  PreProcessor.cpp
src/Editor/: Editor.cpp  EntityOutline.cpp  EntityProperties.cpp  Logger.cpp  SceneHierarchy.cpp
src/data_structures/: DynamicArray.cpp  DynamicArray.h  Tree.h
src/editor/: AssetInspector.cpp  AssetInspector.h  AssetRegistry.cpp  AssetRegistry.h  ContentBrowser.cpp  ContentBrowser.h  Editor.h  EntityOutline.h  Logger.h  SceneHierarchy.h
src/reflection/: Reflection.h  ReflectionAnnotation.h  ReflectionGenerationUtils.h
src/renderer/backend/: BufferCache.cpp  BufferCache.h  ConstantBuffer.h  GraphicsContext.cpp  GraphicsContext.h  JimenezSeparable.h  PipelineStateObject.cpp  PipelineStateObject.h  RenderGraph.cpp  RenderGraph.h  RenderScope.h  Renderer.cpp  Renderer.h  RendererBackend.cpp  RendererBackend.h  ResourceCache.cpp  ResourceCache.h
src/renderer/backend/rhi/: BufferObject.cpp  BufferObject.h  RHIState.cpp  RHIState.h  RenderDevice.h  RenderDeviceDX11.cpp  RenderDeviceHandles.h  RenderHardwareInterface.cpp  RenderHardwareInterface.h
src/renderer/frontend/: Asset.cpp  Asset.h  Camera.cpp  Camera.h  DiffusionProfile.cpp  DiffusionProfile.h  FrontendHandles.h  Lights.h  Material.cpp  Material.h  Model.cpp  Model.h  PipelineStateManager.cpp  PipelineStateManager.h  RendererFrontend.cpp  RendererFrontend.h  SceneGraph.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h
src/renderer/passes/: DebugViewPass.cpp  DebugViewPass.h  EquirectangularToCubemapPass.cpp  EquirectangularToCubemapPass.h  GBufferPass.cpp  GBufferPass.h  LightingPass.cpp  LightingPass.h  PresentPass.cpp  PresentPass.h  SSSPass.cpp  SSSPass.h  ShadowMappingPass.cpp  ShadowMappingPass.h  SkyboxPass.cpp  SkyboxPass.h
src/shaders/: BRDF.hlsli  BasicPixelShader.hlsl  BasicVertexShader.hlsl  BuildPreFilteredMap.hlsl  Composit.hlsl  Convolve_Cubemap.hlsl  CubeData.hlsli  DepthPixelShader.hlsl  DepthVS.hlsl  DepthVertexShader.hlsl  EquirectangularToCubemap.hlsl  FullscreenQuad.hlsl  GBufferPS.hlsl  GBufferVS.hlsl  LightStruct.hlsli  Lighting.hlsl  Present.hlsl  SSSSS.hlsl  ShadowMapping.hlsl  ShadowMaskBuild.hlsl  SimpleVS.hlsl  SkinPixelShader.hlsl  SkyboxPS.hlsl  SkyboxPixelShader.hlsl  SkyboxVS.hlsl  SkyboxVertexShader.hlsl  StandardPixelShader.hlsl  cube.blend
src/shaders/common/: BRDF.hlsli  LightStruct.hlsli
src/utils/: Arena.cpp  Arena.h  Hash.cpp  Hash.h  Pool.cpp  Pool.h
tools/: CMakeLists.txt  PreProcessor.cpp  PreProcessor.h
